# fuzzy-waddle

./: .env.example  .eslintrc.js  .gitattributes  .gitignore  .gitmessage.txt  .npmrc  .skip  147-deterministic-lock-stepping.md  215-high-ground-advantage.md  336-unit-control-on-map.md  394-tooltip-cards.md  434-save-load-camera-groups-ai.md  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTENANCE-NOTICE.md  MULTIPLAYER_SCORE_SUBMISSION.md  MULTIPLAYER_UPDATE_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  PW-001-score-screen-implementation.md  README.md  SECURITY.md  index.html  jest.config.ts  main.047818362281b2e5e753.bundle.js  main.c7bc1c557449960af240.bundle.js  nx.json  package-lock.json  package.json  phasereditor2d.config.json  pnpm-lock.yaml  static.json  sw.js  tsconfig.base.json  tsconfig.json
.claude/: settings.json  settings.local.json
.claude/commands/: commit.md
.devcontainer/: devcontainer.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  git-commit-instructions.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yaml  2-feature-request.yaml  3-docs-bug.yaml  bug_report.md  feature_request.md
.github/agents/: aota-general.agent.md
.github/workflows/: branches.yml  codeql-analysis.yml  develop-ci.yml  develop.yml  main-release.yml  main.yml  master.yml  pull-request-checks.yml
.run/: Client Debug.run.xml  start-e.run.xml
DBMs/: 0001_profiles.sql  0002_storage.sql  0003_messages.sql  0003_test.sql  0004_fly-squasher_scores.sql  0005_probable_waffle_achievements.sql  0006_little_muncher_scores.sql  0007_probable_waffle_game_sessions.sql  0008_probable_waffle_player_scores.sql  0009_probable_waffle_score_snapshots.sql  0010_supabase_create_grants.sql  DATABASE_DESIGN_SCORES.md  DESIGN_COMPARISON.md  storage.sql
apps/api/: .env.example  .eslintrc.json  project.json  tsconfig.json  tsconfig.spec.json  webpack.config.js
apps/api-e2e/: jest.config.ts
apps/client/: .eslintrc.json  jest.config.ts  ngsw-config.json  project.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
apps/client-e2e/: cypress.config.ts  tsconfig.json
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/icons/: icon.icns
apps/client/src-tauri/src/: lib.rs  main.rs
apps/probable-waffle-client/: .eslintrc.json  jest.config.ts  package.json  project.json  tsconfig.json  tsconfig.spec.json
assets/tiles/: tiles.tiled-session
docs/: 237-chat-previous-messages.md
docs/ai/: 000-multiplayer-transport-hardening.md  519-flying-units-offset-fix.md  (+10 more)
patches/: phaser3-rex-plugins@1.80.6.patch
src/: index.html
supabase/: config.toml
tools/: generate-prefabs.py
webpack/: credits.js  webpack.common.js  webpack.dev.js  webpack.prod.js
wiki/: aota-multiplayer-architecture.md  architecture.md  deployment.md  getting-started.md  releases.md  supabase.md  tauri-desktop.md  troubleshooting.md
(+3641 files in other folders)
