[package]
name = "probable-waffle"
version = "1.0.0"
description = "Probable Waffle — Age of the Architects desktop app"
authors = ["Jernej Habjan"]
license = "MIT"
repository = "https://github.com/JernejHabjan/fuzzy-waddle"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem unusual but it is necessary
# to make the lib name unique and to allow it to be documented by `cargo doc`.
name = "probable_waffle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
