[package]
name = "probable-waffle"
version = "0.1.1"
description = "Probable Waffle — Ashes of the Ancients desktop app"
authors = ["Jernej Habjan"]
license = "MIT"
repository = "https://github.com/JernejHabjan/fuzzy-waddle"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem unusual but it is necessary
# to make the lib name unique and to allow it to be documented by `cargo doc`.
name = "probable_waffle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.2", features = [] }

[dependencies]
tauri = { version = "=2.11.2", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "=2.5.4"
tauri-plugin-deep-link = "=2.4.9"
tauri-plugin-window-state = "=2.4.1"
tauri-plugin-notification = "=2.3.3"
tauri-plugin-single-instance = "=2.4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
